<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.stonesoup.solarsystem.Activities.LogIn"
    android:background="@drawable/background">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_username"
        android:hint="@string/st_username"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="#fff"
        android:textColorHint="#fff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_password"
        android:hint="@string/st_password"
        android:layout_margin="5dp"
        android:layout_below="@+id/tv_username"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_log_in"
        android:text="@string/st_bn_log_in"
        android:layout_below="@+id/tv_password"
        android:color="?android:attr/selectableItemBackground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_or_else"
        android:id="@+id/tv_or"
        android:layout_below="@id/bt_log_in"
        android:layout_margin="5dp"
        android:layout_centerInParent="true"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/st_sing_up"
        android:layout_below="@+id/tv_or"
        android:color="?android:attr/selectableItemBackground"/>


</RelativeLayout>
