<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.stonesoup.solarsystem.Activities.SignUp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/sign_up_username"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="@string/st_username"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:id="@+id/sing_up_password"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="@string/st_password"
        android:inputType="textPassword"
        android:layout_below="@+id/sign_up_username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:id="@+id/sing_up_email"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="@string/e_mail"
        android:layout_below="@+id/sing_up_password"/>

    <Button
        android:id="@+id/bt_sign_up_bt_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/st_sing_up"
        android:layout_below="@+id/sing_up_email"
        android:color="?android:attr/selectableItemBackground"/>
</RelativeLayout>
